--- a/HOSPITAIS/cssPerfilHospitais/perfilHospitais.css
+++ b/HOSPITAIS/cssPerfilHospitais/perfilHospitais.css
@@ -4,7 +4,7 @@ html, body {
     margin: 0;
 }
 
-/* Certifique-se de que o main preencha o espaço necessário */
+
 main {
     padding: 20px;
     max-width: 900px;
@@ -84,6 +84,28 @@ header {
     align-items: center;
     gap: 10px;
     margin-top: 15px;
+}
+
+#logoutButton{
+
+    background-color: #007bff;
+    color: white;
+    padding: 12px 25px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 16px;
+    transition: background-color 0.3s ease;
+    display: inline-flex;
+    align-items: center;
+    gap: 10px;
+    margin-top: 15px;
+
+}
+
+#logoutButton:hover{
+    background-color: #0056b3;
+
 }
 
 .cta-button:hover {
